# defi

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  run-java-tests.sh
conditional-escrow-transfer/: Cargo.toml
contract-java-test/: .coverage-allowlist.txt  pom.xml
contract-java-test/src/test/java/defi/: CallOptionTest.java  ConditionalEscrowTransferTest.java  DoubleAuctionOrderMatchingTest.java  LiquidStakingContractTest.java  LiquidStakingContractUpgradeTest.java  LiquiditySwapLockBaseTest.java  LiquiditySwapLockPermissionTest.java  LiquiditySwapLockTest.java  LiquiditySwapRegressionTest.java  LiquiditySwapTest.java  LiquiditySwapTestingUtility.java  MoccaTest.java  NftAuctionContractTest.java  NftTest.java  NftV2Test.java  RouterTest.java  SwapFactoryTest.java  TokenContractTest.java  TokenSplitterTest.java  TokenV2Test.java  ZkDepositContractTest.java  ZkLiquiditySwapContractTest.java  ZkOrderMatchingTest.java
contract-java-test/src/test/java/defi/properties/: DepositWithdrawTest.java  LiquidStakingBaseTest.java  LiquidStakingTest.java  LiquiditySwapBaseTest.java  LiquiditySwapEthUsdcTest.java  LiquiditySwapZkTest.java  Mpc20ExtensionApproveRelativeTest.java  Mpc20ExtensionBulkTransferTest.java  Mpc20LikeTest.java  Mpc20StandardTest.java  Mpc721LikeTest.java  NftAuctionTest.java  OrderMatchingZkTest.java  RoutingTest.java  ZkDepositTest.java
contract-java-test/src/test/java/defi/util/: ExecutionUtil.java  GasBenchmark.java  Mpc20LikeState.java  Mpc20Utility.java
contract-java-test/src/test/resources/defi/previous-versions/: liquid_staking_v1.pbc
defi-common/: Cargo.toml  README.md
defi-common/src/: deploy.rs  interact_mpc20.rs  interact_swap.rs  interact_swap_lock_partial.rs  lib.rs  permission.rs  token_balances.rs
dex-swap-factory/: Cargo.toml
dex-swap-factory/src/: lib.rs
java/: .coverage-allowlist.txt  pom.xml
java-test/: pom.xml
java-test/src/test/java/defi/: ConditionalEscrowTransferTest.java  LiquiditySwapBaseTest.java  LiquiditySwapEthUsdcTest.java  LiquiditySwapGasTest.java  LiquiditySwapLockBaseTest.java  LiquiditySwapLockPermissionTest.java  LiquiditySwapLockTest.java  LiquiditySwapTest.java  MoccaTest.java  NftAuctionContractTest.java  NftAuctionTest.java  NftTest.java  NftV2Test.java  RouterTest.java  SwapFactoryTest.java  TokenContractTest.java  TokenTest.java  TokenV2Test.java  ZkLiquiditySwapContractTest.java  ZkLiquiditySwapTest.java  ZkOrderMatchingTest.java
java-test/src/test/java/defi/properties/: Arbitrary.java  DepositWithdrawTest.java  LiquiditySwapBaseTest.java  LiquiditySwapGasBenchmark.java  LiquiditySwapZkTest.java  Mpc20LikeTest.java  Mpc721LikeTest.java  NftAuctionTest.java  RoutingTest.java
java-test/src/test/java/defi/util/: Arbitrary.java  ExecutionUtil.java
java/src/test/java/defi/: ConditionalEscrowTransferTest.java  LiquiditySwapLockBaseTest.java  LiquiditySwapLockPermissionTest.java  LiquiditySwapLockTest.java  LiquiditySwapTest.java  LiquiditySwapTestingUtility.java  MoccaTest.java  NftV2Test.java  RouterTest.java  SwapFactoryTest.java  TokenContractTest.java  TokenV2Test.java  ZkLiquiditySwapContractTest.java
java/src/test/java/defi/properties/: DepositWithdrawTest.java  LiquiditySwapEthUsdcTest.java  LiquiditySwapGasBenchmark.java  Mpc20LikeTest.java  NftAuctionTest.java  OrderMatchingZkTest.java  RoutingTest.java
java/src/test/java/defi/util/: GasBenchmark.java
liquidity-swap/: Cargo.toml
liquidity-swap-lock/: Cargo.toml
liquidity-swap-lock/src/: lib.rs
liquidity-swap/src/: lib.rs
liquidity-swap/tests/: math_tests.rs
mocca/: Cargo.toml  README.md
mocca/src/: lib.rs
nft/: Cargo.toml
nft-auction/: Cargo.toml
nft-auction/src/: lib.rs
nft-v2/: Cargo.toml  README.md
nft-v2/src/: lib.rs
rust/: Cargo.toml
rust/call-option/: Cargo.toml  README.md
rust/call-option/src/: lib.rs
rust/conditional-escrow-transfer/: README.md
rust/conditional-escrow-transfer/src/: lib.rs
rust/defi-common/: Cargo.toml  README.md
rust/defi-common/src/: deploy.rs  interact_mpc20.rs  interact_swap.rs  interact_swap_lock_partial.rs  lib.rs  liquidity_util.rs  math.rs  permission.rs  token_balances.rs  token_state.rs
rust/dex-swap-factory/: Cargo.toml  README.md
rust/dex-swap-factory/src/: lib.rs
rust/double-auction-order-matching/: Cargo.toml  README.md
rust/double-auction-order-matching/src/: lib.rs
rust/double-auction-order-matching/tests/: priority_tests.rs
rust/liquid-staking/: Cargo.toml  README.md
rust/liquid-staking/src/: lib.rs  upgrade.rs
rust/liquidity-swap/: Cargo.toml  README.md
rust/liquidity-swap-lock/: Cargo.toml  README.md
rust/liquidity-swap-lock/src/: lib.rs  tests.rs
rust/liquidity-swap/src/: lib.rs
rust/liquidity-swap/tests/: math_tests.rs
rust/mocca/: README.md
rust/mocca/src/: lib.rs
rust/nft/: Cargo.toml  README.md
rust/nft-auction/: Cargo.toml  README.md
rust/nft-auction/src/: lib.rs
rust/nft-v2/: README.md
rust/nft-v2/src/: lib.rs
rust/prediction-market-token-splitter/: Cargo.toml  README.md
rust/prediction-market-token-splitter/src/: lib.rs
rust/swap-router/: Cargo.toml  README.md
rust/swap-router/src/: lib.rs
rust/token/: Cargo.toml  README.md
rust/token-v2/: README.md
rust/token-v2/src/: lib.rs
rust/token/src/: lib.rs
rust/zk-deposit/: Cargo.toml  README.md
rust/zk-deposit/src/: contract.rs  zk_compute.rs
rust/zk-liquidity-swap/: Cargo.toml  README.md
rust/zk-liquidity-swap/src/: contract.rs  zk_compute.rs
rust/zk-liquidity-swap/tests/: math_tests.rs
rust/zk-order-matching/: Cargo.toml  README.md
rust/zk-order-matching/src/: contract.rs  zk_compute.rs
scripts/: swaprouter.sh
swap-router/: README.md
swap-router/src/: lib.rs
token/: Cargo.toml
token-v2/: Cargo.toml  README.md
token-v2/src/: lib.rs
zk-liquidity-swap/: Cargo.toml
zk-liquidity-swap/src/: contract.rs  zk_compute.rs
zk-liquidity-swap/tests/: math_tests.rs
zk-order-matching/: README.md
zk-order-matching/src/: zk_compute.rs
