[workspace]
resolver = "2"

members = [
    "dex-swap-factory",
    "liquidity-swap",
    "liquidity-swap-lock",
    "swap-router",
    "token",
    "token-v2",
    "nft",
    "nft-v2",
    "nft-auction",
    "conditional-escrow-transfer",
    "zk-liquidity-swap"
]

[workspace.package]
version = "4.78.0"
description = "Decentralized Finance contracts for the Partisia BlockChain."
homepage = "https://gitlab.com/partisiablockchain/language/contracts/defi"
repository = "https://gitlab.com/partisiablockchain/language/contracts/defi"
documentation = "https://gitlab.com/partisiablockchain/language/contracts/defi"
edition = "2021"
license = "MIT"

[workspace.metadata.partisiablockchain]
cargo-partisia = "4.51.0"

[workspace.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/4.57.0/zkcompiler-4.57.0-jar-with-dependencies.jar"

[workspace.metadata.abi-client]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/abi-client/4.65.0/abi-client-4.65.0-jar-with-dependencies.jar"

[workspace.dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.32.0" }
