[package]
name = "dex-swap-factory"
version = "4.26.0"
description = "Example swap factory and directory for Partisia Blockchain"
homepage = "https://gitlab.com/partisiablockchain/language/contracts/defi/dex-swap-factory"
repository = "https://gitlab.com/partisiablockchain/language/contracts/defi/dex-swap-factory"
documentation = "https://gitlab.com/partisiablockchain/language/contracts/defi/dex-swap-factory"
readme = "README.md"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ['rlib', 'cdylib']

[dependencies]
pbc_contract_common.workspace = true
pbc_traits.workspace = true
pbc_lib.workspace = true
read_write_rpc_derive.workspace = true
read_write_state_derive.workspace = true
create_type_spec_derive.workspace = true
pbc_contract_codegen.workspace = true
defi_common = { path = "../defi-common" }


[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "defi_common/abi"]
